# dep_study

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  log.md  todo.md
.github/workflows/: backend-tests.yml
backend/: README_TESTING.md  database.db  database.py  main.py  manual_db.py  prd.db  pyproject.toml  schemas.py  test.db  test.ipynb
backend/problem_templates/: arithmetic_intensity.j2  bytes2bits.j2  ram_bandwidth.j2  rec_sys_matrix_fact.j2  roofline.j2
backend/src/: models.py
backend/src/problems/: arithmetic_intensity.py  batch_norm_problem.py  bytes2bits.py  dispatch.py  linear_program_dual.py  problem_base.py  ram_bandwidth.py  rec_sys_matrix_fact.py  roofline.py
backend/src/problems/utils/: latex.py  options.py  template.py
backend/src/scheduling/: dispatch.py  scheduler_base.py  simple.py  spaced_repetition.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_problems.py  test_schedulers.py  test_utilities.py
frontend/: README.md  env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.tsx  katex.css  main.tsx
frontend/src/components/: MarkdownMathRenderer.tsx  md.tsx
frontend/src/page/: Browse.tsx  Dashboard.tsx  Practice.tsx  Progress.tsx  Suspended.tsx
