[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "ipykernel>=6.30.1",
    "numpy>=2.2.6",
    "poethepoet>=0.37.0",
]

[tool.poe.tasks]
run = "uv run fastapi dev main.py"